--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,214 @@
-body {
-    background: #aa2828;
-    color: #fff;
+* {
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+	-webkit-appearance:none;
+	-webkit-text-size-adjust: none; 	
 }
+
+body {
+  font-family: arial
+}
+
+.wrapper {
+    margin: 50px auto;
+    max-width: 800px;
+    width: 100%;
+}
+
+.col {
+  display:inline-block;
+  width: 22%;
+  margin: 1%;
+  text-align:center;
+  border: 1px solid #eee;
+  padding: 20px;
+}
+
+h1 {
+  font-size: 40px;
+  color:#fff;
+  display:block;
+  border-radius: 50%;
+  height:90px;
+  padding: 20px;
+  margin:0 auto;
+}
+
+h4 {
+  margin:10px 0;
+}
+
+.bitcoin h1 {
+  background: #f7931a;
+}
+
+.litecoin h1 {
+  background: #bebebe;
+}
+
+.ethereum h1 {
+  background: #454a75;
+}
+
+.ripple h1 {
+  background: #102b3e;
+  font-size:26px;
+  text-align:center;
+  line-height: 50px;
+}
+
+#price, #bprice, #eprice, #rprice{
+  font-size: 20px;
+}
+
+.chan {
+  margin: 20px 0 0 0;
+  padding: 10px;
+  background: #eee;
+  font-size: 12px;
+}
+
+#chan {
+  display: inline-block;
+}
+
+
+
+
+body{
+    margin: 0px;
+    padding: 0px;
+    background: cyan    ;
+  }
+  
+  h1{
+    color: #fff;
+    text-align: center;
+    font-family: Arial;
+    font-weight: normal;
+    margin: 2em auto 0px;
+  }
+  
+  h5{
+    color: #00000;
+    text-align: center;
+    font-family: Arial;
+    font-weight: normal;
+    margin: 1em auto 0px;
+  }
+  
+  
+  
+  
+  
+  .inner-screen{
+    width: 800px;
+    height: 340px;
+    background: #1abc9d;
+    margin: 0px auto;
+    padding-top: 80px;
+  }
+  
+  .form{
+    width: 400px;
+    height: 230px;
+    background: #edeff1;
+    margin: 0px auto;
+    padding-top: 20px;
+    border-radius: 10px;
+    -moz-border-radius: 10px;
+    -webkit-border-radius: 10px;
+  }
+  
+  input[type="text"]{
+    display: block;
+    width: 309px;
+    height: 35px;
+    margin: 15px auto;
+    background: #fff;
+    border: 0px;
+    padding: 5px;
+    font-size: 16px;
+     border: 2px solid #fff;
+    transition: all 0.3s ease;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+  }
+  
+  input[type="text"]:focus{
+    border: 2px solid #1abc9d
+  }
+  
+  input[type="password"]{
+    display: block;
+    width: 309px;
+    height: 35px;
+    margin: 15px auto;
+    background: #fff;
+    border: 0px;
+    padding: 5px;
+    font-size: 16px;
+     border: 2px solid #fff;
+    transition: all 0.3s ease;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+  }
+  
+  input[type="password"]:focus{
+    border: 2px solid #1abc9d
+  }
+  
+  input[type="submit"]{
+    display: block;
+    background: #1abc9d;
+    width: 314px;
+    padding: 12px;
+    cursor: pointer;
+    color: #fff;
+    border: 0px;
+    margin: auto;
+    border-radius: 5px;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    font-size: 17px;
+    transition: all 0.3s ease;
+  }
+  
+  input[type="submit"]:hover{
+    background: #09cca6
+  }
+  
+  a{
+    text-align: center;
+    font-family: Arial;
+    color: gray;
+    display: block;
+    margin: 15px auto;
+    text-decoration: none;
+    transition: all 0.3s ease;
+    font-size: 12px;
+  }
+  
+  a:hover{
+    color: #1abc9d;
+  }
+  
+  
+  ::-webkit-input-placeholder {
+     color: gray;
+  }
+  
+  :-moz-placeholder { /* Firefox 18- */
+     color: gray;  
+  }
+  
+  ::-moz-placeholder {  /* Firefox 19+ */
+     color: gray;  
+  }
+  
+  :-ms-input-placeholder {  
+     color: gray;  
+  }
