--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
                 <input type="text" name="email"  placeholder="Enter Email" />
                 <input type="password" name ="password"  placeholder="Password" />
                  <input type="submit" value="Login" />
-                
+                <a href="/signup">Signup</a>
                 </form>
                 
               </div> 
