--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -9,14 +9,14 @@
         
          
             <div class="inner-screen">
-              <form action="/signup" method = "POST">
-                <div class="form">
-                    <input type="text" name="name" placeholder="Enter your name" />
-                    <input type="text" name="email"  placeholder="Enter Email" />
-                    <input type="password" name="password"  placeholder="Password" />
-                    <input type="submit" value="Signup" />
-            </form>
-                
+                        <form action="/signup" method = "POST">
+                            <div class="form">
+                                <input type="text" name="name" placeholder="Enter your name" />
+                                <input type="text" name="email"  placeholder="Enter Email" />
+                                <input type="password" name="password"  placeholder="Password" />
+                                <input type="submit" value="Signup" />
+                                <a href="/login">Login</a>
+                        </form>
               </div> 
             </div>         
   </html>
